--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,13 +13,14 @@
         <link rel="stylesheet" href="/static/css/form.css">
         <link rel="icon" href="/static/images/logo/favicon.png" type="image/png">
         <link rel="icon" href="/static/images/logo/favicon.ico" type="image/x-icon">
+        <script src="https://kit.fontawesome.com/1f31711f3c.js" crossorigin="anonymous"></script>
         {% block head %}
         {% endblock %}
     </head>
     <body>
         <header>
             <nav>
-                <h2><a href="{{ url_for('index') }}">Onext</a></h2>
+                <h2>Onext</h2>
                 <ul>
                     <li><a href="{{ url_for('index') }}">Home</a></li>
                     <li><a href="{{ url_for('about') }}">About</a></li>
