Clean placeholder links

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,12 +3,12 @@
 <form action="" method="post">
     {{ form.hidden_tag() }}
 
-    {% with item = form.id %}{% include "_input.html" %}{% endwith %}
-    {% with item = form.chrome_url, icon = "chrome", placeholder = "https://chrome.google.com/webstore/detail/" %}{% include "_input.html" %}{% endwith %}
-    {% with item = form.firefox_url, icon = "firefox", placeholder = "https://addons.mozilla.org/en-US/firefox/addon/" %}{% include "_input.html" %}{% endwith %}
-    {% with item = form.safari_url, icon = "safari", placeholder = "https://apps.apple.com/us/app/" %}{% include "_input.html" %}{% endwith %}
-    {% with item = form.opera_url, icon = "opera", placeholder = "https://addons.opera.com/en/extensions/details/" %}{% include "_input.html" %}{% endwith %}
-    {% with item = form.edge_url, icon = "edge", placeholder = "https://microsoftedge.microsoft.com/addons/detail/" %}{% include "_input.html" %}{% endwith %}
+    {% with item = form.id, icon = "link", inside = "onext.io/" %}{% include "_input.html" %}{% endwith %}
+    {% with item = form.chrome_url, icon = "chrome", placeholder = "chrome.google.com/webstore/detail/" %}{% include "_input.html" %}{% endwith %}
+    {% with item = form.firefox_url, icon = "firefox", placeholder = "addons.mozilla.org/en-US/firefox/addon/" %}{% include "_input.html" %}{% endwith %}
+    {% with item = form.safari_url, icon = "safari", placeholder = "apps.apple.com/us/app/" %}{% include "_input.html" %}{% endwith %}
+    {% with item = form.opera_url, icon = "opera", placeholder = "addons.opera.com/en/extensions/details/" %}{% include "_input.html" %}{% endwith %}
+    {% with item = form.edge_url, icon = "edge", placeholder = "microsoftedge.microsoft.com/addons/detail/" %}{% include "_input.html" %}{% endwith %}
     {% with item = form.fallback_url, icon = "globe" %}{% include "_input.html" %}{% endwith %}
 
     <p>{{ form.submit() }}</p>
