--- a/app/templates/_input.html
+++ b/app/templates/_input.html
@@ -1,9 +1,11 @@
 <div class="entry">
     {{ item.label }}
+    <div>
     {% if icon %}
     <i class="fa fa-{{ icon }}"></i>
     {% endif %}
     {% if inside %}<span class="inside">{{ inside }}</span>{% endif %}{{ item(placeholder=placeholder) }}
+    </div>
     {% for error in item.errors %}
     <span class="error">{{ error }}</span>
     {% endfor %}
