--- a/app/templates/_input.html
+++ b/app/templates/_input.html
@@ -4,7 +4,7 @@
     {% if icon %}
     <i class="fa fa-{{ icon }}"></i>
     {% endif %}
-    {% if inside %}<span class="inside">{{ inside }}</span>{% endif %}{{ item(placeholder=placeholder) }}
+    {{ item(placeholder=placeholder) }}
     </div>
     {% for error in item.errors %}
     <span class="error">{{ error }}</span>
