Stop trying to use placeholder

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 
     <div class="entry">
         <div>
-        onext.io/{{ form.id(placeholder=placeholder) }}
+        onext.io/{{ form.id(value=id) }}
         </div>
         {% for error in form.id.errors %}
         <span class="error">{{ error }}</span>
