--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -92,3 +92,23 @@ form .error {
     display: block;
     color: #DD3333;
 }
+button,
+input[type="submit"] {
+    border: solid 2px #111;
+    padding: 5px 10px;
+    background: none;
+    font: inherit;
+    transition: 0.3s;
+    cursor: pointer;
+}
+button:hover,
+input[type="submit"]:hover {
+    color: white;
+    background: #111;
+}
+input[type="submit"] {
+    margin-top: 5px;
+}
+#copy-content:empty {
+    display: none;
+}
