--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,7 @@
                 <span class="error">{{ error }}</span>
                 {% endfor %}
             </div>
+            <img id="qr" src>
         </div>
     </div>
 
