--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
             <div class="entry">
                 {{ form.id.label }}
                 <div>
-                onext.io/{{ form.id(value=id) }}
+                onext.to/{{ form.id(value=id) }}
                 </div>
                 {% for error in form.id.errors %}
                 <span class="error">{{ error }}</span>
